--- a/indexl.html
+++ b/indexl.html
@@ -9,3 +9,9 @@
     
 </body>
 </html>
+
+
+
+git branch -M main
+git remote add origin https://github.com/Ribeiro97/1-ao-100.git
+git push -u origin main
