--- a/indexl.html
+++ b/indexl.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1 ao 100</title>
+
+    <link rel="stylesheet" href="estilo/style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Tabela de números
+        </h1>
+    </header>
+
+    <main id="table">
+        <label for="txt_n">Informe um número </label>
+        <input type="number" name="txt_n" id="txt_n">
+
+    </main>
+
+
+
 </body>
 </html>
-
-
-
-git branch -M main
-git remote add origin https://github.com/Ribeiro97/1-ao-100.git
-git push -u origin main
