--- a/indexl.html
+++ b/indexl.html
@@ -19,9 +19,13 @@
         <label for="txt_n">Informe um número </label>
         <input type="number" name="txt_n" id="txt_n">
 
+        <input type="button" value="Adicionar">
+
+        <select name="t_number" id="t_number">
+            <option value="n_1">aguardando número</option>
+        </select>
+
     </main>
-
-
 
 </body>
 </html>
@@ -29,4 +33,3 @@
 
 
 
-http://127.0.0.1:5500/1-ao-100/indexl.html
