adicionando alguns campos no JS

--- a/indexl.html
+++ b/indexl.html
@@ -21,7 +21,7 @@
 
         <input type="button" value="Adicionar">
 
-        <select name="t_number" id="t_number">
+        <select name="t_number" id="t_number" onclick="Adicionar()">
             <option value="n_1">aguardando número</option>
         </select>
 
