Functions em JS

--- a/indexl.html
+++ b/indexl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="estilo/style.css">
     
+   
 </head>
 <body>
     <header>
@@ -21,14 +22,14 @@
 
         <input type="button" value="Adicionar" onclick="Adicionar()">
 
-        <select name="t_number" id="t_number">
+        <select name="t_number" id="quad_number" size="10">
             <option value="n_1">aguardando número</option>
         </select>
 
     </main>
 
+    
     <script src="script.js"></script>
-
 </body>
 </html>
 
