--- a/indexl.html
+++ b/indexl.html
@@ -25,6 +25,14 @@
         <select name="t_number" id="quad_number" size="10">
             <option value="n_1">aguardando número</option>
         </select>
+        <br>
+        <input type="button" value="Calcular" onclick="Calcular()">
+
+        <p id="msg">
+
+        </p>
+
+        
 
     </main>
 
