--- a/indexl.html
+++ b/indexl.html
@@ -22,21 +22,16 @@
 
         <input type="button" value="Adicionar" onclick="Adicionar()">
 
-        <select name="t_number" id="quad_number" size="10">
+        <select name="t_number" id="quad_number" size="10" ondblclick="remover($list)">
             <option value="n_1">aguardando número</option>
         </select>
         <br>
         <input type="button" value="Calcular" onclick="Calcular()">
+        <input type="button" value="Remover" onclick="remover()">
 
-        <p id="msg">
-
-        </p>
-
-        
+        <p id="msg"></p>
 
     </main>
-
-    
     <script src="script.js"></script>
     <script src="function.js"></script>
 </body>
